--- a/public/css/user/styleUser.css
+++ b/public/css/user/styleUser.css
@@ -6,7 +6,7 @@
     font-weight: 300;
 }
 body {
-    overflow: hidden;
+    /*overflow: hidden;*/
     background: rgb(110, 163, 224);
     background: radial-gradient(circle, rgba(110, 163, 224, 1) 0%, rgba(90, 90, 218, 1) 47%, rgba(122, 48, 87, 1) 100%);
     height: 100vh;
